--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -1,44 +1,71 @@
-body{
-    font-family: 'Georama', sans-serif;
-    font-family: 'Roboto', sans-serif;
+body {
+  font-family: "Georama", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-nav{
-    display: none;
-}
-
-section{
+nav {
+  background-color: burlywood;
+  display: none;
+  top: 0;
+  position: fixed;
+  width: 100vw;
   height: 100vh;
-width: 100vw;  
+  text-align: center;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+      vertical-align: middle;
+      width: 100vw;
+      height: 20vh;
+    }
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
+#menu-toggle {
+  height: 10vh;
+  width: 10vh;
+  background-color: brown;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
 
+section {
+  height: 100vh;
+  width: 100vw;
+}
 
+#inicio {
+  display: grid;
 
+  grid-template-rows: repeat(8, 1fr);
+  text-align: center;
 
-#inicio{
-display: grid;
-
-grid-template-rows: repeat(3, 1fr);
-text-align: center;
-
-    h1{
+  h1 {
+    font-size: 2.5em;
+    margin: 1rem;
     color: blue;
-    grid-row: 2 / 3;
+    grid-row: 2 / 5;
+    padding: 1rem;
+  }
+  div {
+    grid-row: 7 / 8;
+    button {
+      height: 3rem;
     }
-    div{
-    
-    grid-row: 3 / 3;
-        button{
-            height: 3rem;
-            }
-            #contacto{
-                margin-top: 1rem;
-                width: 16rem;
-        }
+    #contacto {
+      margin-top: 1rem;
+      width: 16rem;
     }
-
+  }
 }
 
-#presentacion{
-    background-color: burlywood;
+#presentacion {
+  background-color: burlywood;
 }
