--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,83 +1,109 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: "Georama", sans-serif;
   font-family: "Roboto", sans-serif;
+  font-family: "Tenali Ramakrishna", sans-serif;
+  font-family: "Crimson Text", serif;
 }
 
-nav {
-  background-color: burlywood;
-  display: none;
-  top: 0;
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  vertical-align: middle;
-  width: 100vw;
-  height: 20vh;
-}
-
-nav a {
-  text-decoration: none;
-  color: black;
-}
-
-#menu-toggle {
-  height: 10vh;
-  width: 10vh;
-  background-color: brown;
-  position: fixed;
-  right: 0;
-  top: 0;
-}
-
-section {
-  height: 100vh;
-  width: 100vw;
-}
-
-#inicio {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (1fr)[8];
-      grid-template-rows: repeat(8, 1fr);
-  text-align: center;
-}
-
-#inicio h1 {
-  font-size: 2.5em;
-  margin: 1rem;
-  color: blue;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  grid-row: 2 / 5;
-  padding: 1rem;
-}
-
-#inicio div {
-  -ms-grid-row: 7;
-  -ms-grid-row-span: 1;
-  grid-row: 7 / 8;
-}
-
-#inicio div button {
-  height: 3rem;
-}
-
-#inicio div #contacto {
-  margin-top: 1rem;
-  width: 16rem;
-}
-
-#presentacion {
-  background-color: burlywood;
+@media (max-width: 600px) {
+  nav {
+    opacity: 0.9;
+    background-color: burlywood;
+    display: none;
+    top: 0;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+  }
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  nav ul li {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100vw;
+    height: 20vh;
+  }
+  nav a {
+    font-size: 1.2em;
+    text-decoration: none;
+    color: black;
+  }
+  #menu-toggle {
+    height: 10vh;
+    width: 10vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    right: 0;
+    top: 0;
+  }
+  #inicio {
+    height: 100vh;
+    width: 100vw;
+    font-style: italic;
+    background-color: #4e5572;
+    color: #b0b8db;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+  }
+  #inicio h1 {
+    font-size: 2.5rem;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  #inicio div {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 2;
+    grid-column: 2;
+    display: flexbox;
+  }
+  #inicio button {
+    font-family: "Roboto", sans-serif;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    background-color: #3e4894;
+    font-size: 0.8em;
+    color: #black;
+    height: 2.5rem;
+    border: none;
+  }
+  #inicio #contacto {
+    border: solid 1px;
+    background-color: transparent;
+    margin-top: 1rem;
+    width: 15rem;
+  }
+  #presentacion {
+    background-color: burlywood;
+  }
 }
 /*# sourceMappingURL=estilo.css.map */
