--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -1,71 +1,107 @@
+$primary-color: #4e5572;
+$secondary-color: #3e4894;
+
+$font-color: #b0b8db;
+$font-family-one: "Crimson Text", serif;
+$font-family-two: "Roboto", sans-serif;
+
+@mixin altura {
+  height: 100vh;
+  width: 100vw;
+}
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: "Georama", sans-serif;
   font-family: "Roboto", sans-serif;
+  font-family: "Tenali Ramakrishna", sans-serif;
+  font-family: "Crimson Text", serif;
 }
 
-nav {
-  background-color: burlywood;
-  display: none;
-  top: 0;
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    li {
-      vertical-align: middle;
-      width: 100vw;
-      height: 20vh;
+@media (max-width: 600px) {
+  nav {
+    opacity: 0.9;
+    background-color: burlywood;
+    display: none;
+    top: 0;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      li {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 20vh;
+      }
+    }
+
+    a {
+      font-size: 1.2em;
+      text-decoration: none;
+      color: black;
     }
   }
-
-  a {
-    text-decoration: none;
-    color: black;
+  #menu-toggle {
+    height: 10vh;
+    width: 10vh;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    right: 0;
+    top: 0;
   }
-}
-#menu-toggle {
-  height: 10vh;
-  width: 10vh;
-  background-color: brown;
-  position: fixed;
-  right: 0;
-  top: 0;
-}
 
-section {
-  height: 100vh;
-  width: 100vw;
-}
+  #inicio {
+    @include altura();
 
-#inicio {
-  display: grid;
+    font-style: italic;
+    background-color: $primary-color;
+    color: $font-color;
 
-  grid-template-rows: repeat(8, 1fr);
-  text-align: center;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 
-  h1 {
-    font-size: 2.5em;
-    margin: 1rem;
-    color: blue;
-    grid-row: 2 / 5;
-    padding: 1rem;
-  }
-  div {
-    grid-row: 7 / 8;
+    h1 {
+      font-size: 2.5rem;
+      grid-row: 2;
+      grid-column: 2;
+    }
+    div {
+      grid-row: 3;
+      grid-column: 2;
+      display: flexbox;
+    }
+
     button {
-      height: 3rem;
+      font-family: $font-family-two;
+
+      display: inline-flex;
+      background-color: $secondary-color;
+      font-size: 0.8em;
+      color: #black;
+      height: 2.5rem;
+      border: none;
     }
     #contacto {
+      border: solid 1px;
+      background-color: transparent;
       margin-top: 1rem;
-      width: 16rem;
+      width: 15rem;
     }
   }
-}
 
-#presentacion {
-  background-color: burlywood;
+  #presentacion {
+    background-color: burlywood;
+  }
 }
