--- a/css/estilo.css
+++ b/css/estilo.css
@@ -67,40 +67,34 @@ body {
     display: grid;
     -ms-grid-rows: (1fr)[3];
         grid-template-rows: repeat(3, 1fr);
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
     text-align: center;
   }
   #inicio h1 {
+    padding: 1em;
     font-size: 2.5rem;
     -ms-grid-row: 2;
     grid-row: 2;
-    -ms-grid-column: 2;
-    grid-column: 2;
   }
-  #inicio div {
+  #inicio .contenedor {
+    width: 100%;
     -ms-grid-row: 3;
     grid-row: 3;
-    -ms-grid-column: 2;
-    grid-column: 2;
+  }
+  #inicio .contenedor button {
+    border: none;
+    background-color: #3e4894;
+    height: 2em;
+    width: 25%;
     display: flexbox;
   }
-  #inicio button {
-    font-family: "Roboto", sans-serif;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    background-color: #3e4894;
-    font-size: 0.8em;
-    color: #black;
-    height: 2.5rem;
-    border: none;
+  #inicio .contenedor .contacto {
+    margin-top: 1em;
+    width: 100%;
   }
-  #inicio #contacto {
-    border: solid 1px;
+  #inicio .contenedor .contacto button {
     background-color: transparent;
-    margin-top: 1rem;
-    width: 15rem;
+    width: 77%;
+    border: solid;
   }
   #presentacion {
     background-color: burlywood;
