--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -61,45 +61,48 @@ body {
   }
 
   #inicio {
+    
     @include altura();
-
     font-style: italic;
     background-color: $primary-color;
     color: $font-color;
 
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    
     text-align: center;
 
     h1 {
+      padding: 1em;
       font-size: 2.5rem;
       grid-row: 2;
-      grid-column: 2;
-    }
-    div {
-      grid-row: 3;
-      grid-column: 2;
-      display: flexbox;
+     
     }
 
-    button {
-      font-family: $font-family-two;
+    .contenedor{
+        width: 100%;
+        grid-row: 3;
+        
+        
 
-      display: inline-flex;
-      background-color: $secondary-color;
-      font-size: 0.8em;
-      color: #black;
-      height: 2.5rem;
-      border: none;
+        button{
+          
+            border: none;
+            background-color: $secondary-color;
+            height: 2em;
+            width: 25%;
+            display: flexbox;
+        }
+        .contacto{
+          margin-top: 1em;
+          width: 100%;
+          button{
+          background-color: transparent;
+          width: 77%;
+          border: solid;
+        }}
     }
-    #contacto {
-      border: solid 1px;
-      background-color: transparent;
-      margin-top: 1rem;
-      width: 15rem;
-    }
-  }
+  } 
 
   #presentacion {
     background-color: burlywood;
