--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,25 +65,27 @@ body {
     color: #b0b8db;
     display: -ms-grid;
     display: grid;
-    -ms-grid-rows: (1fr)[3];
-        grid-template-rows: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
     text-align: center;
   }
   #inicio h1 {
+    margin-top: 40%;
     padding: 1em;
     font-size: 2.5rem;
-    -ms-grid-row: 2;
-    grid-row: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
   }
   #inicio .contenedor {
     width: 100%;
-    -ms-grid-row: 3;
-    grid-row: 3;
+    -ms-grid-row: 2;
+    grid-row: 2;
   }
   #inicio .contenedor button {
+    font-size: 1.2em;
     border: none;
     background-color: #3e4894;
-    height: 2em;
+    height: 3em;
     width: 25%;
     display: flexbox;
   }
@@ -97,6 +99,8 @@ body {
     border: solid;
   }
   #presentacion {
+    height: 100vh;
+    width: 100vw;
     background-color: burlywood;
   }
 }
