--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -68,28 +68,29 @@ body {
     color: $font-color;
 
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     
     text-align: center;
 
     h1 {
+      margin-top: 40%;
       padding: 1em;
       font-size: 2.5rem;
-      grid-row: 2;
+      grid-row: 1;
      
     }
 
     .contenedor{
         width: 100%;
-        grid-row: 3;
+        grid-row: 2;
         
         
 
         button{
-          
+            font-size: 1.2em;
             border: none;
             background-color: $secondary-color;
-            height: 2em;
+            height: 3em;
             width: 25%;
             display: flexbox;
         }
@@ -104,7 +105,10 @@ body {
     }
   } 
 
+
+
   #presentacion {
+    @include altura();
     background-color: burlywood;
   }
 }
