--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -18,7 +18,8 @@ $font-family-two: "Roboto", sans-serif;
 }
 
 body {
-  background: url('../img/bg.png');
+  background: url("../img/bg.png");
+  background-attachment: fixed;
 
   font-family: "Georama", sans-serif;
   font-family: "Roboto", sans-serif;
@@ -29,7 +30,7 @@ body {
 @media (max-width: 600px) {
   nav {
     opacity: 0.9;
-    background-color: burlywood;
+    background-color: $primary-color;
     display: none;
     top: 0;
     position: fixed;
@@ -66,7 +67,6 @@ body {
   }
 
   #inicio {
-    
     @include altura();
     font-style: italic;
 
@@ -74,56 +74,102 @@ body {
 
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    
+
     text-align: center;
 
     h1 {
-      -webkit-box-shadow: 0px 10px 13px -7px #000000, 10px 6px 16px -1px rgba(15,19,31,0); 
-box-shadow: 0px 10px 13px -7px #000000, 10px 6px 16px -1px rgba(15,19,31,0);
+      -webkit-box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
+      box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
       border: solid;
       border-radius: 10px;
       margin: 0 1em 1em 1em;
       background: transparent;
       margin-top: 40%;
-      padding: .5em;
+      padding: 0.5em;
       font-size: 2.5rem;
       grid-row: 1;
-     
     }
 
-    .contenedor{
-        width: 100%;
-        grid-row: 2;
-        
-        
+    .contenedor {
+      width: 100%;
+      grid-row: 2;
 
-        button{
-            font-size: 1.2em;
-            color: $terciary-color;
-            border: solid $terciary-color;
-            background-color: transparent;
-            height: 3em;
-            width: 25%;
-            display: flexbox;
-            color: $font-color;
-        }
-        .contacto{
-          margin-top: 1em;
-          width: 100%;
-          button{
+      button {
+        font-size: 1.2em;
+        color: $terciary-color;
+        border: solid $terciary-color;
+        background-color: transparent;
+        height: 3em;
+        width: 25%;
+        display: flexbox;
+        color: $font-color;
+      }
+      .contacto {
+        margin-top: 1em;
+        width: 100%;
+        button {
           background-color: transparent;
           width: 77%;
           border: solid;
-        }}
+        }
+      }
     }
-  } 
-
-
+  }
 
   #presentacion {
     @include altura();
     color: $font-color;
 
+    text-align: center;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+
+    .contenido {
+      -webkit-box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
+      box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
+      border: solid;
+      border-radius: 10px;
+
+      background: transparent;
+      margin-top: 40%;
+      padding: 0.5em;
+      margin: 2em;
+      grid-row: 1;
+    }
+    img {
+      display: flex;
+      align-items: center;
+      width: 30vw;
+      height: 35vh;
+      grid-row: 2;
+    }
+    .contenedor {
+      width: 100%;
+      grid-row: 3;
+
+      button {
+        font-size: 1.2em;
+        color: $terciary-color;
+        border: solid $terciary-color;
+        background-color: transparent;
+        height: 3em;
+        width: 38%;
+        display: flexbox;
+        color: $font-color;
+      }
+      .contacto {
+        margin-top: 1em;
+        width: 100%;
+        button {
+          background-color: transparent;
+          width: 77%;
+          border: solid;
+        }
+      }
+    }
   }
 }
-
