--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -57,8 +57,8 @@ body {
     }
   }
   #menu-toggle {
-    height: 10vh;
-    width: 10vh;
+    height: 5vh;
+    width: 5vh;
     display: flex;
     align-items: center;
     position: fixed;
@@ -137,15 +137,24 @@ body {
       background: transparent;
       margin-top: 40%;
       padding: 0.5em;
-      margin: 2em;
+      margin: 1em 2.2em 1em 2.2em;
       grid-row: 1;
+      h2 {
+        font-style: italic;
+        font-size: 1.8em;
+      }
+      p {
+        font-size: 1.2em;
+      }
     }
     img {
-      display: flex;
-      align-items: center;
+      margin: auto;
+      display: block;
+
       width: 30vw;
-      height: 35vh;
+      height: 25vh;
       grid-row: 2;
+      margin-bottom: 5vh;
     }
     .contenedor {
       width: 100%;
