--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,6 +59,19 @@ body {
     right: 0;
     top: 0;
   }
+  .inicio-boton {
+    height: 5vh;
+    width: 5vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    left: 5px;
+    top: 0;
+  }
   #inicio {
     height: 100vh;
     width: 100vw;
