--- a/css/estilo.css
+++ b/css/estilo.css
@@ -174,13 +174,53 @@ body {
     color: #0f131f;
   }
   #presentacion .contenedor .contacto {
-    margin-top: 1em;
+    margin-bottom: 1em;
     width: 100%;
   }
   #presentacion .contenedor .contacto button {
     background-color: transparent;
-    width: 77%;
+    width: 50%;
     border: solid;
+  }
+  #contacto {
+    height: 100vh;
+    width: 100vw;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    text-align: center;
+  }
+  #contacto .contenido p {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 10px 6px 16px -1px rgba(15, 19, 31, 0);
+    box-shadow: 0px 10px 13px -7px #000000, 10px 6px 16px -1px rgba(15, 19, 31, 0);
+    border: solid;
+    border-radius: 10px;
+    margin: 0 2em 1em 2em;
+    background: transparent;
+    margin-top: 5%;
+    padding: 1.5em;
+  }
+  #contacto .contenido .botonera button {
+    font-size: 1.2em;
+    color: #5a6882;
+    border: solid #5a6882;
+    background-color: transparent;
+    height: 3em;
+    width: 40%;
+    font-size: 1.2em;
+    color: #0f131f;
+  }
+  #contacto .contenido .portafolio {
+    font-size: 1.2em;
+    color: #5a6882;
+    border: solid #0f131f;
+    background-color: transparent;
+    height: 3em;
+    width: 80%;
+    font-size: 1.2em;
+    margin-top: 1em;
+    color: #0f131f;
   }
 }
 /*# sourceMappingURL=estilo.css.map */
