--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -179,13 +179,63 @@ body {
         color: $font-color;
       }
       .contacto {
-        margin-top: 1em;
+        margin-bottom: 1em;
         width: 100%;
         button {
           background-color: transparent;
-          width: 77%;
+          width: 50%;
           border: solid;
         }
+      }
+    }
+  }
+
+  #contacto{
+    @include altura;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+    .contenido{
+      p{
+        -webkit-box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
+      box-shadow: 0px 10px 13px -7px #000000,
+        10px 6px 16px -1px rgba(15, 19, 31, 0);
+      border: solid;
+      border-radius: 10px;
+      margin: 0 2em 1em 2em;
+      background: transparent;
+      margin-top: 5%;
+      padding: 1.5em;
+      
+      }
+      .botonera{
+        
+        button{
+        font-size: 1.2em;
+        color: $terciary-color;
+        border: solid $terciary-color;
+        background-color: transparent;
+        height: 3em;
+        width: 40%;
+       font-size: 1.2em;
+     
+        color: $font-color;
+        }
+        
+      }
+      .portafolio{
+       
+          font-size: 1.2em;
+        color: $terciary-color;
+        border: solid $font-color;
+        background-color: transparent;
+        height: 3em;
+        width: 80%;
+       font-size: 1.2em;
+        margin-top: 1em;
+        color: $font-color;
+        
       }
     }
   }
