--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  overflow: auto;
   background: url("../img/bg.png");
   background-attachment: fixed;
   font-family: "Georama", sans-serif;
@@ -249,6 +250,32 @@ body {
     height: 2em;
     border: solid #0f131f;
     background-color: transparent;
+  }
+}
+
+@media (min-width: 601px) {
+  body {
+    text-align: center;
+  }
+  nav {
+    text-align: center;
+    background-color: #80788d;
+    height: 100%;
+    position: fixed;
+    right: 0;
+    width: 20%;
+  }
+  nav ul {
+    list-style-type: none;
+    margin-top: 4em;
+  }
+  nav li {
+    height: 5em;
+  }
+  #menu-toggle {
+    position: fixed;
+    right: 0;
+    margin: 2em;
   }
 }
 /*# sourceMappingURL=estilo.css.map */
