--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -18,6 +18,7 @@ $font-family-two: "Roboto", sans-serif;
 }
 
 body {
+  overflow:auto ;
   background: url("../img/bg.png");
   background-attachment: fixed;
 
@@ -269,4 +270,32 @@ body {
    
     }
   }
+}
+
+@media (min-width: 601px) {
+body{
+  text-align: center;
+}
+nav{
+ 
+  text-align: center;
+  background-color: $secondary-color;
+  height: 100%;
+  position: fixed;
+
+  right: 0;
+  width: 20%;
+  ul{ list-style-type: none;
+    margin-top: 4em;
+  }
+  li{
+    height: 5em;
+  }
+}
+#menu-toggle{
+  position: fixed;
+  right: 0;
+  margin: 2em;
+}
+  
 }
