--- a/css/styles.css
+++ b/css/styles.css
@@ -11764,7 +11764,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #ef8c86;
 }
 
 .dev-icons {
